# waltid-iota-identity-wrapper

./: Cargo.toml  Dockerfile  Readme.md
src/: dids.rs  lib.rs  store.rs
