[package]
name = "waltid-iota-identity-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.20.1", features = ["full"] }
identity_iota = { version = "0.6" }
