[package]
name = "waltid-iota-identity-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.20.1", features = ["full"] }
identity_core = { version = "=0.6.1", default-features = false }
identity_account_storage = { version = "=0.6.1" }
identity_account = "0.6.1"
identity_did = { version = "=0.6.1", default-features = false }
identity_iota_core = { version = "=0.6.1", default-features = false }
iota-crypto = { version = ">=0.7, <0.10", default-features = false, features = ["hmac", "pbkdf", "sha", "std", "aes", "aes-kw"] }
zeroize = { version = "1.4" }
hashbrown = { version = "0.11", features = ["serde"] }
async-trait = { version = "0.1", default-features = false }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = [ "send-sync-storage", "encryption" ]
# Enables `Send` + `Sync` bounds for the Storage trait.
send-sync-storage = []
encryption = []